--- a/project2/report/project2_report.tex
+++ b/project2/report/project2_report.tex
@@ -26,7 +26,7 @@ The procedure is as follows:
 
 \begin{enumerate}
 	\item Search for the largest matrix element $|a_{pq}|$, where p and q denote the row and column of the max non-diagonal element of the matrix
-	\item The numbers starts at 1 with every call to the enumerate environment.
+	\item sopeoiirhihoe
 \end{enumerate}
 \section{References}
 
