--- a/project2/report/project2_report.tex
+++ b/project2/report/project2_report.tex
@@ -25,8 +25,13 @@
 The procedure is as follows:
 
 \begin{enumerate}
-	\item Search for the largest matrix element $|a_{pq}|$, where p and q denote the row and column of the max non-diagonal element of the matrix
-	\item sopeoiirhihoe
+	\item Search for the largest matrix element $|a_{pq}|$, where indices $p$ and $q$ denote the row and column of the max non-diagonal element of the matrix.
+	\item Given $p$ and $q$, we performed the Jacobi rotation. We defined the quantities
+	$s$, $c$, $t$ as $\sin\theta$, $\cos\theta$, and $\tan\theta$ respectively, and  
+	$\tau$ =  $ \frac{a_{qq} - a_{pp}}{a_{pq}} $
+	where $t^{2}$ $+$ 2$\tau$ $t - 1 = 0$ 
+	
+	
 \end{enumerate}
 \section{References}
 
