--- a/project4/genvel.ipynb
+++ b/project4/genvel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -37,31 +37,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'dot' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-d46af69587c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'dot' is not defined"
+     ]
     }
    ],
-   "source": [
-    "a = [1,2,3]\n",
-    "b = [4,3,2]\n",
-    "dot(a,b)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -69,26 +66,23 @@
     {
      "data": {
       "text/plain": [
-       "(array([  4.10000000e+03,   3.13100000e+03,   1.56200000e+03,\n",
-       "          6.60000000e+02,   3.26000000e+02,   1.38000000e+02,\n",
-       "          5.20000000e+01,   2.20000000e+01,   5.00000000e+00,\n",
-       "          4.00000000e+00]),\n",
-       " array([  2.56794478e-03,   9.82633930e+00,   1.96501107e+01,\n",
-       "          2.94738820e+01,   3.92976534e+01,   4.91214247e+01,\n",
-       "          5.89451961e+01,   6.87689674e+01,   7.85927388e+01,\n",
-       "          8.84165101e+01,   9.82402815e+01]),\n",
+       "(array([    8.,    42.,   339.,  1133.,  2346.,  2783.,  2094.,   957.,\n",
+       "          264.,    34.]),\n",
+       " array([-8.79502896, -7.16502716, -5.53502537, -3.90502357, -2.27502178,\n",
+       "        -0.64501998,  0.98498181,  2.6149836 ,  4.2449854 ,  5.87498719,\n",
+       "         7.50498899]),\n",
        " <a list of 10 Patch objects>)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADwxJREFUeJzt3V2sXWWdx/Hvz1aoEzOUlxNC2mYOhiamJiOaBmucCwMR\nKhDLBRrEjI1p0hsmwcTEKTPJEF9Iyo2oyWiGSGM1IjJqQgMkpBbMZC4EiiACDcMRS2iDttqCYwxk\niv+52E/JFno8+9DTvQ/n+X6Snb3Wfz17r2c9ac/vrNeTqkKS1J+3TboDkqTJMAAkqVMGgCR1ygCQ\npE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnVo+6Q78Neecc05NT09PuhuS9JbyyCOP/K6qpuZqt6gD\nYHp6mr179066G5L0lpLkuVHaeQhIkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkD\nQJI6tajvBD5Z09vumch692+/YiLrlaT5cA9AkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKRO\nGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpU0v6aaD7V1w767Lpl28fY08kafEZeQ8gybIkjya5\nu82fn+TBJDNJfpDktFY/vc3PtOXTQ99xQ6s/neSyhd4YSdLo5nMI6Hpg39D8zcAtVXUBcBTY0upb\ngKOtfktrR5J1wDXAe4CNwDeSLDu57kuS3qyRAiDJauAK4FttPsDFwA9bk53AVW16U5unLb+ktd8E\n3FFVr1TVr4EZ4KKF2AhJ0vyNugfwVeDzwJ/b/NnAi1V1rM0fAFa16VXA8wBt+Uut/Wv1E3zmNUm2\nJtmbZO/hw4fnsSmSpPmYMwCSXAkcqqpHxtAfqurWqlpfVeunpqbGsUpJ6tIoVwF9CPhYksuBFcDf\nAl8DViZZ3n7LXw0cbO0PAmuAA0mWA2cAvx+qHzf8GUnSmM25B1BVN1TV6qqaZnAS9/6q+hTwAHB1\na7YZuKtN72rztOX3V1W1+jXtKqHzgbXAQwu2JZKkeTmZ+wD+GbgjyZeBR4HbWv024LtJZoAjDEKD\nqnoyyZ3AU8Ax4LqqevUk1i9JOgnzCoCq+inw0zb9LCe4iqeqXgY+PsvnbwJumm8nJUkLz0dBSFKn\nDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoA\nkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ\n6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnVo+6Q5Myv4V1866bPrl\n28fYE0maDPcAJKlT3e4BnErT2+6ZyHr3b79iIuuV9NY05x5AkhVJHkryiyRPJvlCq5+f5MEkM0l+\nkOS0Vj+9zc+05dND33VDqz+d5LJTtVGSpLmNcgjoFeDiqnovcCGwMckG4Gbglqq6ADgKbGnttwBH\nW/2W1o4k64BrgPcAG4FvJFm2kBsjSRrdnAFQA39ss29vrwIuBn7Y6juBq9r0pjZPW35JkrT6HVX1\nSlX9GpgBLlqQrZAkzdtIJ4GTLEvyGHAI2A38Cnixqo61JgeAVW16FfA8QFv+EnD2cP0Enxle19Yk\ne5PsPXz48Py3SJI0kpECoKperaoLgdUMfmt/96nqUFXdWlXrq2r91NTUqVqNJHVvXpeBVtWLwAPA\nB4GVSY5fRbQaONimDwJrANryM4DfD9dP8BlJ0piNchXQVJKVbfodwEeAfQyC4OrWbDNwV5ve1eZp\ny++vqmr1a9pVQucDa4GHFmpDJEnzM8p9AOcBO9sVO28D7qyqu5M8BdyR5MvAo8Btrf1twHeTzABH\nGFz5Q1U9meRO4CngGHBdVb26sJsjSRrVnAFQVY8D7ztB/VlOcBVPVb0MfHyW77oJuGn+3ZQkLTQf\nBSFJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkA\nktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJ\nnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQp\nA0CSOjVnACRZk+SBJE8leTLJ9a1+VpLdSZ5p72e2epJ8PclMkseTvH/ouza39s8k2XzqNkuSNJdR\n9gCOAZ+rqnXABuC6JOuAbcCeqloL7GnzAB8F1rbXVuCbMAgM4EbgA8BFwI3HQ0OSNH5zBkBVvVBV\nP2/T/wvsA1YBm4CdrdlO4Ko2vQn4Tg38DFiZ5DzgMmB3VR2pqqPAbmDjgm6NJGlk8zoHkGQaeB/w\nIHBuVb3QFv0GOLdNrwKeH/rYgVabrS5JmoCRAyDJO4EfAZ+tqj8ML6uqAmohOpRka5K9SfYePnx4\nIb5SknQCIwVAkrcz+OH/var6cSv/th3aob0favWDwJqhj69utdnqf6Gqbq2q9VW1fmpqaj7bIkma\nh1GuAgpwG7Cvqr4ytGgXcPxKns3AXUP1T7ergTYAL7VDRfcBlyY5s538vbTVJEkTsHyENh8C/hH4\nZZLHWu1fgO3AnUm2AM8Bn2jL7gUuB2aAPwGfAaiqI0m+BDzc2n2xqo4syFZIkuZtzgCoqv8GMsvi\nS07QvoDrZvmuHcCO+XRQknRqeCewJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMG\ngCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnRrlD8J0Z/+Ka2ddNv3y7WPsiSSdOu4BSFKn\nDABJ6pQBIEmd8hzAEjK97Z6JrXv/9ismtm5Jb457AJLUKQNAkjplAEhSpwwASeqUASBJnTIAJKlT\nBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOjVn\nACTZkeRQkieGamcl2Z3kmfZ+ZqsnydeTzCR5PMn7hz6zubV/JsnmU7M5kqRRjbIH8G1g4+tq24A9\nVbUW2NPmAT4KrG2vrcA3YRAYwI3AB4CLgBuPh4YkaTLmDICq+i/gyOvKm4CdbXoncNVQ/Ts18DNg\nZZLzgMuA3VV1pKqOArt5Y6hIksbozZ4DOLeqXmjTvwHObdOrgOeH2h1otdnqkqQJOemTwFVVQC1A\nXwBIsjXJ3iR7Dx8+vFBfK0l6nTcbAL9th3Zo74da/SCwZqjd6labrf4GVXVrVa2vqvVTU1NvsnuS\npLm82QDYBRy/kmczcNdQ/dPtaqANwEvtUNF9wKVJzmwnfy9tNUnShCyfq0GS7wMfBs5JcoDB1Tzb\ngTuTbAGeAz7Rmt8LXA7MAH8CPgNQVUeSfAl4uLX7YlW9/sSyJGmM5gyAqvrkLIsuOUHbAq6b5Xt2\nADvm1TtJ0injncCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUA\nSFKn5nwWkP7S/hXXzrps+uXbx9gTSTo57gFIUqfcA9CCmN52z0TWu3/7FRNZr7QUuAcgSZ0yACSp\nUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE75MLgF9NceFQ0+\nLlrS4uIegCR1ygCQpE4ZAJLUKc8B6C1tUn+IBvxjNHrrcw9AkjplAEhSpwwASeqUASBJnfIk8Bj9\ntRvFvElM0ri5ByBJnTIAJKlTYz8ElGQj8DVgGfCtqto+7j5IC2FS9yB4/4EWylgDIMky4N+BjwAH\ngIeT7Kqqp8bZj8XI8wOSxm3cewAXATNV9SxAkjuATUD3ASCNyruftVDGHQCrgOeH5g8AHxhzH95y\n3DvQYuFhr6Vl0V0GmmQrsLXN/jHJ0yfxdecAvzv5Xi1mV57sF3QwRgvCcRrNKRmn3LzQ3zhR4/i3\n9HejNBp3ABwE1gzNr26111TVrcCtC7GyJHurav1CfNdS5RiNxnEajeM0t8U0RuO+DPRhYG2S85Oc\nBlwD7BpzHyRJjHkPoKqOJfkn4D4Gl4HuqKonx9kHSdLA2M8BVNW9wL1jWt2CHEpa4hyj0ThOo3Gc\n5rZoxihVNek+SJImwEdBSFKnlmQAJNmY5OkkM0m2Tbo/k5RkR5JDSZ4Yqp2VZHeSZ9r7ma2eJF9v\n4/Z4kvdPrufjk2RNkgeSPJXkySTXt7rjNCTJiiQPJflFG6cvtPr5SR5s4/GDdoEHSU5v8zNt+fQk\n+z9OSZYleTTJ3W1+UY7RkguAocdNfBRYB3wyybrJ9mqivg1sfF1tG7CnqtYCe9o8DMZsbXttBb45\npj5O2jHgc1W1DtgAXNf+zThOf+kV4OKqei9wIbAxyQbgZuCWqroAOApsae23AEdb/ZbWrhfXA/uG\n5hfnGFXVknoBHwTuG5q/Abhh0v2a8JhMA08MzT8NnNemzwOebtP/AXzyRO16egF3MXheleM0+xj9\nDfBzBnfy/w5Y3uqv/f9jcLXfB9v08tYuk+77GMZmNYNfGC4G7gayWMdoye0BcOLHTayaUF8Wq3Or\n6oU2/Rvg3Dbd/di1XfD3AQ/iOL1BO7TxGHAI2A38Cnixqo61JsNj8do4teUvAWePt8cT8VXg88Cf\n2/zZLNIxWooBoHmowa8eXgoGJHkn8CPgs1X1h+FljtNAVb1aVRcy+C33IuDdE+7SopLkSuBQVT0y\n6b6MYikGwJyPmxC/TXIeQHs/1Ordjl2StzP44f+9qvpxKztOs6iqF4EHGBzOWJnk+D1Fw2Px2ji1\n5WcAvx9zV8ftQ8DHkuwH7mBwGOhrLNIxWooB4OMm5rYL2NymNzM45n28/ul2lcsG4KWhQyBLVpIA\ntwH7quorQ4scpyFJppKsbNPvYHCeZB+DILi6NXv9OB0fv6uB+9ue1JJVVTdU1eqqmmbws+f+qvoU\ni3WMJn3C5BSdhLkc+B8Gxyf/ddL9mfBYfB94Afg/BscetzA4xrgHeAb4CXBWaxsGV1D9CvglsH7S\n/R/TGP0Dg8M7jwOPtdfljtMbxunvgUfbOD0B/Furvwt4CJgB/hM4vdVXtPmZtvxdk96GMY/Xh4G7\nF/MYeSewJHVqKR4CkiSNwACQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIAJKlT/w/JGZrTYNsQ\npgAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYIAAAD8CAYAAAB6paOMAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEZhJREFUeJzt3XuMpXV9x/H3p4DYeAnQHbe4u3bRbC9r2iKZII2mobVy\n2RoXk9ZgjG4tyZoGUk1NGpBErKaJtlVbE4uhlQgJSmnVuDW0uFIa/+Iyq8hVyoASdrOwa/EaE1v0\n2z/Ob8tx3dmd257nDL/3Kzk5z/N9nnPO98yZmc88t9+kqpAk9evnhm5AkjQsg0CSOmcQSFLnDAJJ\n6pxBIEmdMwgkqXMGgSR1ziCQpM4ZBJLUuROHbuBo1q1bV5s3bx66DUlaU/bs2fOtqppZ7PpTHQSb\nN29mbm5u6DYkaU1J8thS1nfXkCR1ziCQpM4ZBJLUOYNAkjpnEEhS5wwCSeqcQSBJnTMIJKlzBoEk\ndW6qryyWployzOtWDfO6etYyCKQVCAv/Ui4GCgppidw1JEmdMwgkqXMGgSR1ziCQpM4ZBJLUOYNA\nkjpnEEhS5wwCSeqcQSBJnTMIJKlzBoEkdc4gkKTOGQSS1DlHH9XaNtRQ0NKziFsEktQ5g0CSOmcQ\nSFLnjhkESTYluS3JA0nuT/KOVn9vkn1J7m63bWOPuSLJfJKHkpw/Vr+g1eaTXH583pIkaSkWc7D4\naeBdVfWVJC8A9iTZ3ZZ9pKr+ZnzlJFuBi4GXAy8GvpTkl9vijwGvBfYCdyXZVVUPrMYbkSQtzzGD\noKr2A/vb9PeTPAhsOMpDtgM3VtWPgG8kmQfObsvmq+pRgCQ3tnUNAkka0JKOESTZDLwCuKOVLkty\nT5Jrk5zaahuAx8cetrfVFqof/ho7k8wlmTt48OBS2pMkLcOigyDJ84HPAO+squ8BVwMvA85ktMXw\nodVoqKquqarZqpqdmZlZjaeUJB3Foi4oS3ISoxC4oao+C1BVT44t/wfgC212H7Bp7OEbW42j1CVJ\nA1nMWUMBPgE8WFUfHqufPrbaG4D72vQu4OIkJyc5A9gC3AncBWxJckaS5zA6oLxrdd6GJGm5FrNF\n8CrgLcC9Se5utXcDb0pyJlDAN4G3A1TV/UluYnQQ+Gng0qr6MUCSy4BbgBOAa6vq/lV8L5KkZUhV\nDd3DgmZnZ2tubm7oNjTNBh5rKCz881Mcp96m+GdW0yHJnqqaXez6XlksSZ0zCCSpcwaBJHXOIJCk\nzhkEktQ5g0CSOue/qpQW4WiniUprnVsEktQ5g0CSOmcQSFLnDAJJ6pxBIEmdMwgkqXMGgSR1ziCQ\npM4ZBJLUOYNAkjpnEEhS5wwCSeqcQSBJnTMIJKlzBoEkdc4gkKTOGQSS1Dn/Q5l0nBztv5oVmWAn\n0tG5RSBJnTMIJKlzBoEkde6YQZBkU5LbkjyQ5P4k72j105LsTvJwuz+11ZPko0nmk9yT5Kyx59rR\n1n84yY7j97YkSYu1mC2Cp4F3VdVW4Bzg0iRbgcuBW6tqC3Brmwe4ENjSbjuBq2EUHMBVwCuBs4Gr\nDoWHJGk4xwyCqtpfVV9p098HHgQ2ANuB69pq1wEXtentwPU1cjtwSpLTgfOB3VX1VFV9G9gNXLCq\n70aStGRLOkaQZDPwCuAOYH1V7W+LngDWt+kNwONjD9vbagvVD3+NnUnmkswdPHhwKe1JkpZh0UGQ\n5PnAZ4B3VtX3xpdVVcFRTppegqq6pqpmq2p2ZmZmNZ5SknQUiwqCJCcxCoEbquqzrfxk2+VDuz/Q\n6vuATWMP39hqC9UlSQNazFlDAT4BPFhVHx5btAs4dObPDuDzY/W3trOHzgG+23Yh3QKcl+TUdpD4\nvFaTJA1oMUNMvAp4C3Bvkrtb7d3AB4CbklwCPAa8sS27GdgGzAM/BN4GUFVPJXk/cFdb731V9dSq\nvAtJ0rJltHt/Os3Oztbc3NzQbWiaZTJj9hxt3KDlWNFYQ1P8M6vpkGRPVc0udn2vLJakzhkEktQ5\ng0CSOmcQSFLnDAJJ6pxBIEmdMwgkqXMGgSR1ziCQpM4tZogJSdNkQldTH5FXNT8ruUUgSZ0zCCSp\ncwaBJHXOIJCkzhkEktQ5g0CSOmcQSFLnDAJJ6pxBIEmdMwgkqXMGgSR1ziCQpM4ZBJLUOYNAkjpn\nEEhS5wwCSeqcQSBJnTtmECS5NsmBJPeN1d6bZF+Su9tt29iyK5LMJ3koyflj9QtabT7J5av/ViRJ\ny7GYLYJPAhccof6Rqjqz3W4GSLIVuBh4eXvM3yc5IckJwMeAC4GtwJvaupKkgR3zfxZX1ZeTbF7k\n820HbqyqHwHfSDIPnN2WzVfVowBJbmzrPrDkjiVJq2olxwguS3JP23V0aqttAB4fW2dvqy1UlyQN\nbLlBcDXwMuBMYD/wodVqKMnOJHNJ5g4ePLhaTytJWsCygqCqnqyqH1fVT4B/4JndP/uATWOrbmy1\nhepHeu5rqmq2qmZnZmaW054kaQmWFQRJTh+bfQNw6IyiXcDFSU5OcgawBbgTuAvYkuSMJM9hdEB5\n1/LbliStlmMeLE7yaeBcYF2SvcBVwLlJzgQK+CbwdoCquj/JTYwOAj8NXFpVP27PcxlwC3ACcG1V\n3b/q70aStGSpqqF7WNDs7GzNzc0N3YamWTKZl2F1f06KyfS96qb494WekWRPVc0udn2vLJakzh1z\n15C0KBP6y1zS6nOLQJI6ZxBIUucMAknqnEEgSZ0zCCSpcwaBJHXOIJCkzhkEktQ5g0CSOmcQSFLn\nDAJJ6pxBIEmdMwgkqXMGgSR1ziCQpM4ZBJLUOYNAkjpnEEhS5wwCSeqcQSBJnfOf10tNqKFbkAbh\nFoEkdc4gkKTOGQSS1DmDQJI6ZxBIUueOGQRJrk1yIMl9Y7XTkuxO8nC7P7XVk+SjSeaT3JPkrLHH\n7GjrP5xkx/F5O5KkpVrMFsEngQsOq10O3FpVW4Bb2zzAhcCWdtsJXA2j4ACuAl4JnA1cdSg8JEnD\nOmYQVNWXgacOK28HrmvT1wEXjdWvr5HbgVOSnA6cD+yuqqeq6tvAbn42XCRJA1juMYL1VbW/TT8B\nrG/TG4DHx9bb22oL1SVJA1vxweKqKli9SzKT7Ewyl2Tu4MGDq/W0kqQFLDcInmy7fGj3B1p9H7Bp\nbL2NrbZQ/WdU1TVVNVtVszMzM8tsT5K0WMsNgl3AoTN/dgCfH6u/tZ09dA7w3bYL6RbgvCSntoPE\n57WaJGlgxxx0LsmngXOBdUn2Mjr75wPATUkuAR4D3thWvxnYBswDPwTeBlBVTyV5P3BXW+99VXX4\nAWipGwsNcFdkwp1IkNEu/uk0Oztbc3NzQ7ehxcja/wU2DaOPTn0QTPHvCz0jyZ6qml3s+l5ZLEmd\nMwgkqXMGgSR1ziCQpM4ZBJLUOYNAkjpnEEhS5wwCSeqcQSBJnTMIJKlzBoEkdc4gkKTOGQSS1DmD\nQJI6ZxBIUucMAknqnEEgSZ0zCCSpcwaBJHXOIJCkzhkEktQ5g0CSOnfi0A1IWkOSYV63apjX7YRb\nBJLUOYNAkjpnEEhS5wwCSeqcQSBJnVtRECT5ZpJ7k9ydZK7VTkuyO8nD7f7UVk+SjyaZT3JPkrNW\n4w1IklZmNbYIfqeqzqyq2TZ/OXBrVW0Bbm3zABcCW9ptJ3D1Kry2JGmFjseuoe3AdW36OuCisfr1\nNXI7cEqS04/D60uSlmClQVDAF5PsSbKz1dZX1f42/QSwvk1vAB4fe+zeVpMkDWilVxa/uqr2JXkR\nsDvJ18cXVlUlWdIlgS1QdgK85CUvWWF7kqRjWdEWQVXta/cHgM8BZwNPHtrl0+4PtNX3AZvGHr6x\n1Q5/zmuqaraqZmdmZlbSniRpEZYdBEmel+QFh6aB84D7gF3AjrbaDuDzbXoX8NZ29tA5wHfHdiFJ\nkgaykl1D64HPZTQI1YnAp6rq35PcBdyU5BLgMeCNbf2bgW3APPBD4G0reG0tZKhBwSStWcsOgqp6\nFPjNI9T/G3jNEeoFXLrc15MkHR9eWSxJnTMIJKlzBoEkdc4gkKTOGQSS1DmDQJI6ZxBIUudWOtaQ\ntOaEJQ1/JT3ruUUgSZ0zCCSpcwaBJHXOIJCkznmwWJoiRzuQXTiyrI4PtwgkqXMGgSR1ziCQpM4Z\nBJLUOYNAkjpnEEhS5wwCSeqc1xFImn4Z8BqKevYPUugWgSR1ziCQpM4ZBJLUOYNAkjrnweLjYcgD\nW5K0RG4RSFLnDAJJ6tzEgyDJBUkeSjKf5PJJv74k6adNNAiSnAB8DLgQ2Aq8KcnWSfagPoRa8LZW\nPdvej6bHpLcIzgbmq+rRqvof4EZg+4R7kCSNmfRZQxuAx8fm9wKvPG6v5tk7z2r+NayJGOr3yASH\ntpi600eT7AR2ttkfJHloEQ9bB3zr+HW1YtPeH0x/j0fob+qCfpCv4RK/Cmvwc546k+lx+QG0Dvil\npTxg0kGwD9g0Nr+x1f5fVV0DXLOUJ00yV1WzK2/v+Jj2/mD6e5z2/sAeV8O09wfT32Prb/NSHjPp\nYwR3AVuSnJHkOcDFwK4J9yBJGjPRLYKqejrJZcAtwAnAtVV1/yR7kCT9tIkfI6iqm4GbV/lpl7Qr\naQDT3h9Mf4/T3h/Y42qY9v5g+ntccn+pDv7pgiRpYQ4xIUmdW/NBkORdSSrJujafJB9tQ1jck+Ss\nAXt7f+vh7iRfTPLiaeoxyV8n+Xrr4XNJThlbdkXr76Ek5w/RX+vjD5Pcn+QnSWYPWzYtPU7dsClJ\nrk1yIMl9Y7XTkuxO8nC7P3XgHjcluS3JA+0zfsc09ZnkuUnuTPK11t9ftPoZSe5on/c/tRNfBpPk\nhCRfTfKFZfdXVWv2xuhU1FuAx4B1rbYN+DdGp1efA9wxYH8vHJv+U+Dj09QjcB5wYpv+IPDBNr0V\n+BpwMnAG8AhwwkA9/hrwK8B/ArNj9anokdFJD48ALwWe03raOtT33Fhfvw2cBdw3Vvsr4PI2ffmh\nz3vAHk8HzmrTLwD+q32uU9Fn+/l8fps+Cbij/bzeBFzc6h8H/mTgr+OfAZ8CvtDml9zfWt8i+Ajw\n5/BTl5huB66vkduBU5KcPkRzVfW9sdnn8UyfU9FjVX2xqp5us7czuq7jUH83VtWPquobwDyj4UEm\nrqoerKojXVQ4LT1O5bApVfVl4KnDytuB69r0dcBFE23qMFW1v6q+0qa/DzzIaPSBqeiz/Xz+oM2e\n1G4F/C7wL60+6NcxyUbg94F/bPNhGf2t2SBIsh3YV1VfO2zRkYax2DCxxg6T5C+TPA68GXhPK09V\nj80fM9pKgens73DT0uO09LEY66tqf5t+Alg/ZDPjkmwGXsHor+6p6bPtdrkbOADsZrT1952xP6CG\n/rz/ltEfwz9p87/AMvqbuiEmxiX5EvCLR1h0JfBuRrs2BnW0Hqvq81V1JXBlkiuAy4Crpqm/ts6V\nwNPADZPs7ZDF9KjVVVWVZCpOGUzyfOAzwDur6nsZG1ph6D6r6sfAme342eeAXx2ql8MleR1woKr2\nJDl3Jc811UFQVb93pHqSX2e0X/hr7ZtmI/CVJGeziGEsJtHjEdzA6PqJq5hgj8fqL8kfAa8DXlNt\np+Ik+4MlfQ3HTbTHNdDHYjyZ5PSq2t92RR4YuqEkJzEKgRuq6rOtPHV9VtV3ktwG/BajXbkntr+6\nh/y8XwW8Psk24LnAC4G/W05/a3LXUFXdW1UvqqrNNRpTYy+jg05PMBqy4q3tzJxzgO+ObWZOVJIt\nY7Pbga+36anoMckFjDYrX19VPxxbtAu4OMnJSc4AtgB3Trq/Y5iWHtfSsCm7gB1tegcw6NZW25/9\nCeDBqvrw2KKp6DPJzKEz6ZL8PPBaRscxbgP+YOj+quqKqtrYfgdeDPxHVb15Wf0NebR7tW7AN3nm\nrKEw+uc3jwD3MnamyQB9fQa4D7gH+FdgwzT1yOgA6+PA3e328bFlV7b+HgIuHPBr+AZGQf8j4Eng\nlinscRujM14eYbQ7a5A+Duvp08B+4H/b1+8SRvuPbwUeBr4EnDZwj69mdPD1nrHvwW3T0ifwG8BX\nW3/3Ae9p9Zcy+qNjHvhn4OQp+LzP5Zmzhpbcn1cWS1Ln1uSuIUnS6jEIJKlzBoEkdc4gkKTOGQSS\n1DmDQJI6ZxBIUucMAknq3P8BCaIrq8Ka/i4AAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f6b193d7b50>"
+       "<matplotlib.figure.Figure at 0x7f98f3f137d0>"
       ]
      },
      "metadata": {},
@@ -101,15 +95,15 @@
     "vs2 = []\n",
     "for i in range(N):\n",
     "    a = gen3v(5.0)\n",
-    "    b = gen3v(20.0)\n",
-    "    a = mag(a)\n",
-    "    b = mag(b)\n",
+    "    b = gen3v(100.0)\n",
+    "#     a = mag(a)\n",
+    "#     b = mag(b)\n",
     "\n",
-    "    vs1.append(a)\n",
-    "    vs2.append(b)    \n",
+    "    vs1.append(a[1])\n",
+    "    vs2.append(b[1])    \n",
     "    \n",
-    "plt.hist(vs2)\n",
-    "plt.hist(vs1)\n"
+    "plt.hist(vs2,color  = 'r')\n",
+    "plt.hist(vs1, color = 'b')\n"
    ]
   },
   {
