--- a/project4/src/MDcode/statanalysis.ipynb
+++ b/project4/src/MDcode/statanalysis.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -165,6 +165,76 @@
     "plt.xlabel('$T_e$ (K)')\n",
     "plt.ylabel('D (10 $A^2$/s)')\n",
     "plt.title('Diffusion vs Equilibrium Temperature')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.text.Text at 0x7f5c3ae95d50>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAY4AAAEaCAYAAAAG87ApAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGW1JREFUeJzt3XmYZXV95/H3h24WZVW7RdkEBVTENS1uUUHQNIyBiWYc\nUFxBRiY6ajQZEncyi2iiQYMxMOO4DSBiRtuI4qOiRBGkFSWy2iBCg0qjLLIoDXznj3PKvl1Udd1f\nd9Wtqu7363nq6XvO/d1zvvfXVfdzz+9sqSokSRrWZrNdgCRpfjE4JElNDA5JUhODQ5LUxOCQJDUx\nOCRJTQwO/V6SjyZ5x8D0sUl+meT2JA9J8qwkP+mn//0GrOfLSV45PVVPryTPTnLFdLRNslvfVwuG\nWNb+SVa21CrNlngex6YhyTXAjsA9wL3ApcAngZOr6r4J2m8O3AY8vap+1M/7OrCsqk4cVd3zSd/H\nR1fV19bjtfsDn66qXcbN343u/2rM1sCdwNgf7sFV9a/rVfAsS7IVcBewa1UZmvPIwtkuQCP1x1X1\ntSTbA88FTgSeBrx6grY7AlsBlwzMe8S4ac2wqroW2GZsOkkBT6yqFbNX1XCSLKyqe2Z4HQuq6t6Z\nXIfuz6GqTVBV3VpVy4D/CLwyyb4AST6e5L8l2RsYG4K5Jck3klwFPBL4Yj/8smWSa5IcNLbcJO9O\n8un+8VZJPp3kV0luSXJhkh37576Z5Oj+8WZJ3p7kZ0luTPLJPthIsnuSSvLKJNcmuSnJ2yZ6T0me\nluQXg8NCSf4kycX94/2SLE9yWz/89oFJlrPWkFH/Ht+a5OIktyb5TP9Nea22ST4F7DbQP385UP/C\nvs2rk1yW5DdJrk7yn9r+5yaW5AFJ/j7JdX0ffDjJlv1zS5Os6Pv4piTXJzkkyWFJrur/f94ysKz3\nJjktyef6Oi9M8riB53dN8oV+WVcned24157a99FvgMP74c0L+t+BG5J8cKw/gHP7f68YG/5M8rok\nXxtY5lZ9H+7ST5+e5ENJvprkDuAZ63r/mhkGxyasqr4HrASePW7+lcDYh8UOVfW8qnoUcC3dVss2\nVfW7KRb/SmB7YFfgIcDr6IYlxntV/3MAXTBtA/zDuDZ/CDwaOBB4Z5LHTvBeLgDuAJ43MPulwKn9\n4xOBE6tqO+BRwBlT1D/oJcBSYA/gCX2949f/ctbun/dNsJwbgRcC29Ft5X0wyVMa6pjMB4BdgMfT\n9dPewHEDz+8OrAYeBrwX+Bjwp/17OQj470l2Hmj/YuATwIOBLwD/nGRBH8pnAecBO9H1yV8nee4E\nr90e+Fy/3tfT/Q48G/hj4Oi+7XP6fx/d99nnh3y/RwLvALYFLhzi/WuaGRy6ge4DYrqtpvuw2LOq\n7q2q71fVbRO0exnwgaq6uqpuB/6K7pvq4DDqe6rqrn5fy4+AJ06yztOAIwCSbAsc0s8bq2fPJIuq\n6vaqOr/hvXyoqm6oql8DXwSe1PDa36uqL1XVVdX5FvBVxoV2q76fjgLeWFW3VNWtdOFw+ECzO4D3\n98NGp9MNQ/5tVd1RVRcBV9F96I45r6qWVdXqflmLgKfQBfhWVXVCVd3df8H4P+PW9a2qOquq7uv/\nz75XVRf2vwNXAf+Lbph0Q5xZVRf0++buHeL9a5q5j0M7A7+egeV+im5r4/QkOwCfBt7WfxgN2gn4\n2cD0z+h+L3ccmPeLgcd3MjDmP86pwHlJjgVeBPygqsaWfRRwPHB5kp/ShdG/DPlexq9/pyFft5Yk\nBwPvovtGvBnwQODf1mdZA3YCNgcuSfL7VdEdBDFm1cABEGNbfb8ceP4u1u7T68YeVNU9SW7o17M9\nsHuSWwbaLgC+NtFrAZLsA/wdXfA8gO7/9jvDvrlJDK5jmPevaeYWxyYsyVPpguPb67mIO+g+/MY8\nbOxBVa2uqvdU1T7AM+mGaF4xwTJuoNvpPmY3uj/6X07Qdp2q6lK64DmYtYepqKqfVNURwEOBE4Az\nk2zduo6pSpjsiX7M/XPA3wI7VtUOdMM+mew1Q/o5XX89qqp26H+2r6qHbMAydx170A9P7UT3/3Qd\ncPnAenaoqm2r6k8GXju+D04BftDXtx1deGeStrCO36lJ1jET719TMDg2QUm2S/JCumGLT1fV+n7r\n/SHdsNLmSZbQjZuPreOAJI/vP3huoxsqut9hv3RDSW9OskeSbYD/AXxmA47GORV4I934+WcH6jky\nyeL+m/fYN+aJ6tkQv6TbTzORLYAtgVXAPf3Wxws2dIX9FtzHgBOTLEpn1yTP34DFPjPJC9Mdkv2X\nwK/oPvy/DZDkTf1O64VJnjDFfpptgVur6vZ+J/trB2r/HXAra/fZD4EnJ3lckgcC71xXoTP0/jUF\ng2PT8sX+aJfrgLfR7VSc6FDcYb2DbkfzzcB7GPiGT/dN8Uy60LgM+Bbd8NV4H+vnnwv8FPgt8IYN\nqOk0ujH0b1TVTQPzl9INZ9xOt6P88KqaaGf9hvifwNv7I4jeOvhEVf0G+C90O+VvptsiWjZN630T\n3RbBcroP4q8Ae27A8j4HvIauzhcDL+73Uaym22/0TLotu1XAPzL50CHAm4Gj+34/CfjMuOffCXy2\n77ND+y8x7wP+Fbgc+OYQ9U73+9cUPAFQ0u8leS+wqKqOnrKxNllucUiSmow0OJJ8LN1JXj+e5Pn0\nJ/esSHfC1XQc4y5JmkYjHapK8hzgduCTVbXvBM8fQje+fQjdpTBOrKqnjaxASdKURrrFUVXnsu5z\nBg6jC5XqT9DaIcnDR1OdJGkYc20fx86sfXLPyn6eJGmOmLdnjic5BjgGYOutt/6DxzzmMbNckSTN\nL9///vdvqqrFra+ba8FxPQNnrdJduOz6iRpW1cnAyQBLliyp5cuXz3x1krQRSfKzqVvd31wbqloG\nvKI/uurpdGec/ny2i5IkrTHSLY4kpwH7A4vS3cfgXXQXKKOqPkp37Z5DgBV0F5PbkLOaJUkzYKTB\n0V9kbl3PF/BnIypHkrQe5tpQlSRpjjM4JElNDA5JUhODQ5LUxOCQJDUxOCRJTQwOSVITg0OS1MTg\nkCQ1MTgkSU0MDklSE4NDktTE4JAkNTE4JElNDA5JUhODQ5LUxOCQJDUxOCRJTQwOSVITg0OS1MTg\nkCQ1MTgkSU0MDklSE4NDktTE4JAkNTE4JElNDA5JUhODQ5LUxOCQJDUxOCRJTQwOSVITg0OS1MTg\nkCQ1MTgkSU0MDklSk5EHR5KlSa5IsiLJcRM8v1uSc5JclOTiJIeMukZJ0uRGGhxJFgAnAQcD+wBH\nJNlnXLO3A2dU1ZOBw4GPjLJGSdK6jXqLYz9gRVVdXVV3A6cDh41rU8B2/ePtgRtGWJ8kaQqjDo6d\ngesGplf28wa9GzgyyUrgLOANEy0oyTFJlidZvmrVqpmoVZI0gbm4c/wI4ONVtQtwCPCpJPers6pO\nrqolVbVk8eLFIy9SkjZVow6O64FdB6Z36ecNOgo4A6CqvgtsBSwaSXWSpCmNOjguBPZKskeSLeh2\nfi8b1+Za4ECAJI+lCw7HoiRpjhhpcFTVPcDrgbOBy+iOnrokyfFJDu2bvQV4bZIfAacBr6qqGmWd\nkqTJLRz1CqvqLLqd3oPz3jnw+FLgWaOuS5I0nLm4c1ySNIcZHJKkJgaHJKmJwSFJamJwSJKaGByS\npCYGhySpicEhSWpicEiSmhgckqQmBockqYnBIUlqYnBIkpoYHJKkJgaHJKmJwSFJamJwSJKaGByS\npCYGhySpicEhSWpicEiSmhgckqQmBockqYnBIUlqYnBIkpoYHJKkJgaHJKmJwSFJamJwSJKaGByS\npCYGhySpicEhSWpicEiSmqxXcCTZOsmC6S5GkjT3DRUcSTZL8tIkX0pyI3A58PMklyZ5f5I9h11h\nkqVJrkiyIslxk7R5Sb/sS5KcOuyyJUkzb+GQ7c4Bvgb8FfDjqroPIMmDgQOAE5L8v6r69LoW0m+l\nnAQ8H1gJXJhkWVVdOtBmr349z6qqm5M8tPVNSZJmzrDBcVBVrR4/s6p+DXwO+FySzYdYzn7Aiqq6\nGiDJ6cBhwKUDbV4LnFRVN/fruHHIGiVJIzDUUNVYaCQ5N8l2/ePXJXlTki0G20xhZ+C6gemV/bxB\newN7J/lOkvOTLB2mRknSaLTuHN++qm5L8gd0WwYPAk6Z5poWAnsB+wNHAKck2WF8oyTHJFmeZPmq\nVaumuQRJ0mRag2N1koXAK4ATqupdwOMaXn89sOvA9C79vEErgWVVtbqqfgpcSRcka6mqk6tqSVUt\nWbx4cdObkCStv9bg+DDwI+CFwBf7eds0vP5CYK8ke/RDXIcDy8a1+Tzd1gZJFtENXV3dWKckaYYM\nezjuM5Kkqj4BPA3Yt6ru6g/D/e6wK6uqe4DXA2cDlwFnVNUlSY5Pcmjf7GzgV0kupTua6y+q6lcN\n70mSNINSVVM3Sv6RLjCuBL4CfKWqfjHDtQ1tyZIltXz58tkuQ5LmlSTfr6olra8b6nDcqjq2X8lj\ngIOBjyfZnm6L4CvAd6rq3taVS5Lmn6Z9HFV1eVV9sKqWAs8Dvg38B+CCmShOkjT3DHsC4P1U1V3A\nWf2PJGkTMeUWR5LnJzklyZP66WNmvixJ0lw1zBbHa4Bjgbf316Z60syWJEmay4bZx/Gbqrqlqt4K\nvAB46gzXJEmaw4YJji+NPaiq44BPzlw5kqS5bsrgqKovjJv+8MyVI0ma6zb41rETXYBQkrTxGvpw\n3CRb013QcN+Bf/cFtgYMD0naRAwVHEmuATanu+HS5XTXmToCeJI3WpKkTcuwQ1VfBH4NnFJVb6iq\njwC/MzQkadMz7B0A30B3KfVDklyY5GBg6qsjSpI2OkPvHK+qn1XVq4BX0d3972FJDpihuiRJc1Tz\nUVVVdUlVvQg4AHhbkm9Nf1mSpLlqQy5yeAFwUJIDp7EeSdIct8HncVTV16ejEEnS/LDBwSFJ2rS0\nnAD4GOAwYOd+1vXAsqq6bCYKkyTNTUNtcST5r8DpQIDv9T8BTkty3MyVJ0maa4bd4jgKeFxVrR6c\nmeQDwCXAe6e7MEnS3DTsPo77gJ0mmP/w/jlJ0iZi2C2ONwFfT/IT4Lp+3m7AnsDrZ6IwSdLcNFRw\nVNVXkuwN7MfaO8cvrKp7Z6o4SdLcM/RRVVV1H3D+DNYiSZoHpuNGTq+ejkIkSfPDdJwA+J5pWIYk\naZ4Y9kZOF0/2FLDj9JUjSZrrht3HsSPwR8DN4+YHOG9aK5IkzWnDBse/ANtU1Q/HP5Hkm9NakSRp\nThv2cNyj1vHcS6evHEnSXDfstaoyHW0kSfPfsEdVnZPkDUl2G5yZZIskz0vyCeCV01+eJGmuGXYf\nx1LgNXRXw90DuAXYClgAfBX4+6q6aGZKlCTNJcPu4/gt8BHgI0k2BxYBd1XVLTNZnCRp7mk+AbCq\nVlfVz9c3NJIsTXJFkhXrupdHkhcnqSRL1mc9kqSZMdJbxyZZAJwEHAzsAxyRZJ8J2m0LvBG4YJT1\nSZKm1hwcSRYnWbye69sPWFFVV1fV3XR3FTxsgnZ/A5wA/HY91yNJmiFDH46b5N1JbgKuAK5MsirJ\nOxvXtzNr7ucBsJI1l2kfW9dTgF2r6ktT1HRMkuVJlq9ataqxDEnS+hp2i+PNwLOAp1bVg6vqQcDT\ngGclefN0FZNkM+ADwFumaltVJ1fVkqpasnjx+m4ASZJaDRscLweOqKqfjs2oqquBI4FXNKzvemDX\ngeld+nljtgX2Bb6Z5Brg6cAyd5BL0twxbHBsXlU3jZ9ZVauAzRvWdyGwV5I9kmwBHA4sG1jerVW1\nqKp2r6rd6W4cdWhVLW9YhyRpBg0bHHev53Nrqap76O5RfjZwGXBGVV2S5Pgkhw67HEnS7Bn2zPEn\nJrltgvmhO4N8aFV1FnDWuHkT7mSvqv1bli1JmnnDnjm+YKYLkSTNDyM9AVCSNP8ZHJKkJgaHJKmJ\nwSFJamJwSJKaGBySpCYGhySpicEhSWpicEiSmhgckqQmBockqYnBIUlqYnBIkpoYHJKkJgaHJKmJ\nwSFJamJwSJKaGBySpCYGhySpicEhSWpicEiSmhgckqQmBockqYnBIUlqYnBIkpoYHJKkJgaHJKmJ\nwSFJamJwSJKaGBySpCYGhySpicEhSWpicEiSmow8OJIsTXJFkhVJjpvg+T9PcmmSi5N8PckjRl2j\nJGlyIw2OJAuAk4CDgX2AI5LsM67ZRcCSqnoCcCbwvlHWKElat1FvcewHrKiqq6vqbuB04LDBBlV1\nTlXd2U+eD+wy4holSesw6uDYGbhuYHplP28yRwFfntGKJElNFs52AZNJciSwBHjuJM8fAxwDsNtu\nu42wMknatI16i+N6YNeB6V36eWtJchDwNuDQqvrdRAuqqpOraklVLVm8ePGMFCtJur9RB8eFwF5J\n9kiyBXA4sGywQZInA/9EFxo3jrg+SdIURhocVXUP8HrgbOAy4IyquiTJ8UkO7Zu9H9gG+GySHyZZ\nNsniJEmzYOT7OKrqLOCscfPeOfD4oFHXJEkanmeOS5KaGBySpCYGhySpicEhSWpicEiSmhgckqQm\nBockqYnBIUlqYnBIkpoYHJKkJgaHJKmJwSFJamJwSJKaGBySpCYGhySpicEhSWpicEiSmhgckqQm\nBockqYnBIUlqYnBIkpoYHJKkJgaHJKmJwSFJamJwSJKaGBySpCYGhySpicEhSWpicEiSmhgckqQm\nBockqYnBIUlqYnBIkpoYHJKkJgaHJKnJyIMjydIkVyRZkeS4CZ7fMsln+ucvSLL7qGuUJE1upMGR\nZAFwEnAwsA9wRJJ9xjU7Cri5qvYEPgicMMoaJUnrNuotjv2AFVV1dVXdDZwOHDauzWHAJ/rHZwIH\nJskIa5QkrcPCEa9vZ+C6gemVwNMma1NV9yS5FXgIcNNgoyTHAMf0k79L8uMZqXj+WcS4vtqE2Rdr\n2Bdr2BdrPHp9XjTq4Jg2VXUycDJAkuVVtWSWS5oT7Is17Is17Is17Is1kixfn9eNeqjqemDXgeld\n+nkTtkmyENge+NVIqpMkTWnUwXEhsFeSPZJsARwOLBvXZhnwyv7xnwLfqKoaYY2SpHUY6VBVv8/i\n9cDZwALgY1V1SZLjgeVVtQz438CnkqwAfk0XLlM5ecaKnn/sizXsizXsizXsizXWqy/il3lJUgvP\nHJckNTE4JElN5lVweLmSNYboiz9PcmmSi5N8PckjZqPOUZiqLwbavThJJdkoD8Ucph+SvKT/vbgk\nyamjrnFUhvj72C3JOUku6v9GDpmNOkchyceS3DjZuW7pfKjvq4uTPGXKhVbVvPih25l+FfBIYAvg\nR8A+49r8Z+Cj/ePDgc/Mdt2z2BcHAA/sHx+7KfdF325b4FzgfGDJbNc9S78TewEXAQ/qpx8623XP\nYl+cDBzbP94HuGa2657B/ngO8BTgx5M8fwjwZSDA04ELplrmfNri8HIla0zZF1V1TlXd2U+eT3fO\nzMZomN8LgL+hu+7Zb0dZ3AgN0w+vBU6qqpsBqurGEdc4KsP0RQHb9Y+3B24YYX0jVVXn0h2hOpnD\ngE9W53xghyQPX9cy51NwTHS5kp0na1NV9wBjlyvZ2AzTF4OOovtGsTGasi/6Te9dq+pLoyxsxIb5\nndgb2DvJd5Kcn2TpyKobrWH64t3AkUlWAmcBbxhNaXNS6+fJ/L3kiIaT5EhgCfDc2a5lNiTZDPgA\n8KpZLmUuWEg3XLU/3RbouUkeX1W3zGpVs+MI4ONV9XdJnkF37ti+VXXfbBc2H8ynLQ4vV7LGMH1B\nkoOAtwGHVtXvRlTbqE3VF9sC+wLfTHIN3Rjuso1wB/kwvxMrgWVVtbqqfgpcSRckG5th+uIo4AyA\nqvousBXdxQ83RUN9ngyaT8Hh5UrWmLIvkjwZ+Ce60NhYx7Jhir6oqluralFV7V5Vu9Pt7zm0qtbr\n4m5z2DB/H5+n29ogySK6oaurR1nkiAzTF9cCBwIkeSxdcKwaaZVzxzLgFf3RVU8Hbq2qn6/rBfNm\nqKpm7nIl886QffF+YBvgs/3xAddW1aGzVvQMGbIvNnpD9sPZwAuSXArcC/xFVW10W+RD9sVbgFOS\nvJluR/mrNtIvmSQ5je4Lw6J+n867gM0BquqjdPt4DgFWAHcCr55ymRtpX0mSZsh8GqqSJM0BBock\nqYnBIUlqYnBIkpoYHJKkJgaHJKmJwSENIcnRSX7Y/9w38PiDQ7z2AUm+lWRBktsH5h+S5Mokj0iy\nRZJz+yseSHOa53FIDZLsDJxXVUPf3yTJnwELq+rEJLdX1TZJDqQ7s/+Pquqqvt276K7q+n9npHhp\nmrjFIbXZF/i3xte8DPjC2ESS5wCnAC8cC43e5/u20pzmZrHU5vHAhHdSm0h/raRHVtU1/awt6a8Z\nVVWXj2v+Y+Cp01GkNJPc4pDarLXFkWTrJJ9IckqSibYWFgGDly1fDZxHd3XWtVTVvcDdSbad5pql\naWVwSG3Gb3G8CDizql4LTHQRybvorrw65j7gJcB+Sf56gvZbsvHepVAbCYNDGlJ/U6i9gMsGZu/C\nmrun3Tv+Nf1tWhck2Wpg3p3AvwNeluT3Wx5JHgLcVFWrZ6B8adoYHNLw9gRW9vexHrOSNfdzn+zv\n6avAHw7OqKpfA0uBtycZ21I5ANiYb2+rjYSH40obIMnWwD/QDS99e6JDaft7nr+5ql4+xbL+GTiu\nqq6ckWKlaeJRVdIGqKo7mOLGN1X1gyTnJFnQ7wC/n/7oq88bGpoP3OKQJDVxH4ckqYnBIUlqYnBI\nkpoYHJKkJgaHJKmJwSFJamJwSJKaGBySpCb/Hxmf9ao4joARAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f5c3af4e7d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def fullT(datalist,index):\n",
+    "    temp = [119.735*row[6] for row in datalist[index]]\n",
+    "    \n",
+    "    return temp\n",
+    "\n",
+    "\n",
+    "for i in range(len(datalist)):\n",
+    "    time = [row[0] for row in datalist[i]]\n",
+    "    T0s = [119.735*row[6] for row in datalist[index]]\n",
+    "    plt.plot(T0s,time)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "plt.xlabel('$T_0$ (K)')\n",
+    "plt.ylabel('D (10 $A^2/s$)')\n",
+    "plt.title('Diffusion vs initial Temperature')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-d7e7f119a9eb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mT0s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m119.735\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdatalist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "T0s = [119.735*row[6] for row in datalist[0]]"
    ]
   },
   {
